--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ archivesBaseName = "PlayBlock-MC1.7.10"
 
 minecraft {
     version = "1.7.10-10.13.4.1448-1.7.10"
-    runDir = "eclipse"
+    runDir = "run"
 }
 
 repositories {
@@ -35,6 +35,9 @@ repositories {
 
 dependencies {
     compile "li.cil.oc:OpenComputers:MC1.7.10-1.5.15.31:dev"
+    compile 'net.java.dev.jna:jna:3.5.2'
+    compile 'uk.co.caprica:vlcj:2.3.1'
+    compile 'net.minidev:json-smart-mini:1.0.8'
 }
 
 jar {
@@ -60,5 +63,11 @@ processResources
     // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
+    }
+}
+
+idea {
+    module {
+        inheritOutputDirs = true
     }
 }
